k3s/external/jellyfin-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-external
  namespace: kube-system
spec:
  type: ExternalName
  externalName: <servarr-ip>
  ports:
    - port: 8096
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.homelab.local`)
      kind: Rule
      services:
        - name: jellyfin-external
          port: 8096
  tls:
    certResolver: cloudflare
