k3s/external/proxmox-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox-external
  namespace: kube-system
spec:
  type: ExternalName
  externalName: <proxmox-ip>
  ports:
    - port: 8006
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`proxmox.homelab.local`)
      kind: Rule
      services:
        - name: proxmox-external
          port: 8006
          scheme: https
          serversTransport: proxmox-transport
  tls:
    certResolver: cloudflare
